--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"express-edge": "^2.0.2",
 		"express-fileupload": "^1.1.6",
 		"express-session": "^1.17.1",
-		"mongoose": "^5.9.13"
+		"mongoose": "^5.9.13",
+		"slugify": "^1.4.0"
 	},
 	"devDependencies": {},
 	"scripts": {
